--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-webpack-boilerplate",
+  "name": "commune",
   "version": "1.0.1",
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
