--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules
 npm-debug.log
 dist
 .DS_Store
+bundle.js
+bundle.js.map
 
 ### PhpStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
