--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "commune",
   "version": "1.0.1",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server",
-    "prod": "./node_modules/.bin/webpack -p && node server.js",
+    "dev:server": "./node_modules/.bin/webpack-dev-server",
+    "dev:api": "node server",
+    "prod:build": "NODE_ENV=production ./node_modules/.bin/webpack -p",
+    "prod:server": "NODE_ENV=production node server",
     "webpack": "./node_modules/.bin/webpack",
     "dev:migrate": "NODE_ENV=development knex migrate:latest",
     "prod:migrate": "NODE_ENV=production knex migrate:latest"
