--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.2",
     "css-loader": "^0.28.5",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "knex": "^0.13.0",
+    "knex-logger": "^0.1.0",
+    "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
+    "pg": "^7.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
