--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "prod:migrate": "NODE_ENV=production knex migrate:latest"
   },
   "dependencies": {
+    "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.5",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
+    "popper.js": "^1.12.5",
+    "postcss-loader": "^2.0.8",
+    "precss": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
