Cleanup to .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ dist
 bundle.js
 bundle.js.map
 .vscode
+.env
 
 ### PhpStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
