add react router

--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "css-loader": "^0.28.5",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "knex": "^0.13.0",
     "knex-logger": "^0.1.0",
     "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
     "pg": "^7.3.0",
-    "jquery": "^3.2.1",
     "popper.js": "^1.12.5",
     "postcss-loader": "^2.0.8",
     "precss": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
