--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "cookie-session": "^2.0.0-beta.3",
     "css-loader": "^0.28.5",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
@@ -34,8 +36,8 @@
     "precss": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
