--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
+    "stripe": "^5.2.0",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "webpack": "^3.5.5"
