--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "scripts": {
     "dev:server": "./node_modules/.bin/webpack-dev-server",
-    "dev:api": "node --inspect=5858 server",
+    "dev:api": "node server",
     "prod:build": "NODE_ENV=production ./node_modules/.bin/webpack -p",
     "prod:server": "NODE_ENV=production node server",
     "webpack": "./node_modules/.bin/webpack",
@@ -16,6 +16,7 @@
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -40,6 +41,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "stripe": "^5.2.0",
