--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.28.5",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
     "google-map-react": "^0.25.0",
     "jquery": "^3.2.1",
     "knex": "^0.13.0",
@@ -48,6 +49,7 @@
     "sass-loader": "^6.0.6",
     "stripe": "^5.2.0",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "uuid": "^3.1.0",
     "webpack": "^3.5.5"
   },
