--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "css-loader": "^0.28.5",
     "dotenv": "^4.0.0",
+    "draft-js": "^0.10.4",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "google-map-react": "^0.25.0",
