--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "knex-logger": "^0.1.0",
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "pg": "^7.3.0",
     "popper.js": "^1.12.5",
