--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ bundle.js
 bundle.js.map
 .vscode
 .env
+user-avatars
 
 ### PhpStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
