--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-star-rating-component": "^1.3.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
