--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ bundle.js.map
 .vscode
 .env
 user-avatars
+event-images
 
 ### PhpStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
